[gd_scene load_steps=6 format=3 uid="uid://cvtjdoh02r8g"]

[ext_resource type="Script" uid="uid://bf4c5p7yh5q3k" path="res://Scripts/field_item.gd" id="1_6r4jv"]
[ext_resource type="Texture2D" uid="uid://0koeeikh28bg" path="res://Textures/grad.png" id="1_hit0g"]
[ext_resource type="Texture2D" uid="uid://c3pnu5qlod12i" path="res://Textures/div.png" id="1_vt32d"]
[ext_resource type="Texture2D" uid="uid://seftyy2bqi7h" path="res://Textures/curl.png" id="3_6r4jv"]
[ext_resource type="Texture2D" uid="uid://82gik2iv8465" path="res://Textures/delete.png" id="5_ugbb7"]

[node name="Field Item" type="PanelContainer"]
offset_right = 446.0
offset_bottom = 45.0
script = ExtResource("1_6r4jv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Visible" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Visiblity
Max 1 vector field and 1 scalar field."

[node name="Selected" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Select Field
Allows field to be edited. Max 1 field. "

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Text"

[node name="Gradient" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Generate Gradient
Creates a vector field that is the gradient of this field."
disabled = true
icon = ExtResource("1_hit0g")
icon_alignment = 1
expand_icon = true

[node name="Divergence" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Generate Divergence
Creates a scalar field that is the divergence of this field."
disabled = true
icon = ExtResource("1_vt32d")
icon_alignment = 1
expand_icon = true

[node name="Curl" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Generate Curl
Creates a scalar field that is the 2D-curl of this field."
disabled = true
icon = ExtResource("3_6r4jv")
icon_alignment = 1
expand_icon = true

[node name="Delete" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
tooltip_text = "Delete
Removes this field from the list."
icon = ExtResource("5_ugbb7")
expand_icon = true

[connection signal="toggled" from="HBoxContainer/Visible" to="." method="_on_visible_toggled"]
[connection signal="toggled" from="HBoxContainer/Selected" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/Gradient" to="." method="_on_gradient_pressed"]
[connection signal="pressed" from="HBoxContainer/Divergence" to="." method="_on_divergence_pressed"]
[connection signal="pressed" from="HBoxContainer/Curl" to="." method="_on_curl_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
